--- a/styles.css
+++ b/styles.css
@@ -5,17 +5,9 @@ body {
     
 }
 
-header {
-    background-color: aliceblue;;
-    color: black;
+#title {
+    padding-bottom: 5%;
 }
-/* #title {
-    background-color: black;
-    color: aliceblue;
-    border-radius: 5px;
-    border-color: black;
-    border-width: 5px;
-} */
 
 * {
     font-family: Helvetica Black Oblique;
@@ -25,6 +17,18 @@ header {
     
 
 header {
+    background-color: white;
+    opacity: 0.85;
+    color: black;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    
+}
+#messageWrapper{
+    background-color: white;
+    opacity: 0.85;
+    color: black;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -34,7 +38,7 @@ header {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    padding-top: 5%;
+    /* padding-top: 1%; */
    
 }
 
@@ -60,7 +64,4 @@ header {
     width: 300px;
     height: 600px;
     border-radius: 5px;
-}
-#message { 
-    padding-left: 40%;
 }
